[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.9.0",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.10",
    "mcp>=1.9.4",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.34.3",
]
