[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.9.0",
    "geopy>=2.4.1",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.10",
    "mcp>=1.9.4",
    "openmeteo-requests>=1.5.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "uvicorn>=0.34.3",
]
